--- a/dredd.yml
+++ b/dredd.yml
@@ -6,7 +6,8 @@ dry-run: null
 hookfiles: null
 language: nodejs
 sandbox: false
-server: node app.js
+#server: node app.js
+server: null
 server-wait: 3
 init: false
 names: false
@@ -33,4 +34,5 @@ hooks-worker-handler-host: 127.0.0.1
 hooks-worker-handler-port: 61321
 config: ./dredd.yml
 blueprint: swagger.yaml
-endpoint: 'http://127.0.0.1:3000'
+# endpoint: 'http://127.0.0.1:3000'
+endpoint: 'https://apip.oracleau.cloud'
